tasky-main/iac/app-deployments/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: tasky
spec:
  containers:
    # - name: amazonlinux-container
    #   image: amazonlinux
    #   command: ["sleep", "3600"]
    # - name: kubectl-container
    #   image: bitnami/kubectl:latest
    #   command: ["sleep", "3600"]
    # - name: busybox-container
    #   image: busybox:latest
    #   command: ["sleep", "3600"]
    # - name: netshoot-container
    #   image: nicolaka/netshoot:latest
    #   command: ["sleep", "3600"]
    - name: mongo-container
      image: mongo:4.0 # Use the same version as your MongoDB deployment
      command: ["sleep", "3600"]
    # - name: curl-container
    #   image: curlimages/curl:latest
    #   command: ["sleep", "3600"]
