tasky-main/iac/app-deployments/mongodb-access-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-access-policy
  namespace: tasky
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tasky # Only allow pods with the "app: tasky" label to access MongoDB
      ports:
        - protocol: TCP
          port: 27017
